@@ -47,13 +47,11 @@ import org.hisp.dhis.message.MessageType;
 import org.hisp.dhis.system.util.DhisHttpResponse;
 import org.hisp.dhis.system.util.HttpUtils;
 import org.hisp.dhis.user.User;
-import org.hisp.dhis.user.UserCredentials;
-import org.hisp.dhis.user.UserCredentialsStore;
 import org.hisp.dhis.user.UserService;
+import org.hisp.dhis.user.UserStore;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import com.google.api.client.http.HttpStatusCodes;
-import com.google.common.collect.ImmutableSet;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
@@ -71,7 +69,7 @@ public class SystemUpdateService
 
     public static final String NEW_VERSION_AVAILABLE_MESSAGE_SUBJECT = "System update available";
 
-    private static final int MAX_NOTIFING_RECIPIENTS = 100;
+    public static final String NEW_VERSION_AVAILABLE_MESSAGE_BODY = "A new patch version %s of DHIS 2 is now available for download from the link below. Patch releases contain bug and security fixes, and upgrading is recommended.";
 
     public static final String FIELD_NAME_VERSION = "version";
 
@@ -84,7 +82,7 @@ public class SystemUpdateService
     public static final String FIELD_NAME_URL = "url";
 
     @NonNull
-    private final UserCredentialsStore userCredentialsStore;
+    private final UserStore userStore;
 
     @NonNull
     private final UserService userService;
@@ -120,7 +118,7 @@ public class SystemUpdateService
                 false, null, null, null, 0, true );
 
             int statusCode = httpResponse.getStatusCode();
-            if ( statusCode != HttpStatusCodes.STATUS_CODE_OK )
+            if ( statusCode != HttpStatus.OK.value() )
             {
                 throw new IllegalStateException(
                     "Failed to fetch the version file, "
@@ -207,23 +205,23 @@ public class SystemUpdateService
     {
         Set<User> recipients = getRecipients();
 
-        for ( Map.Entry<Semver, Map<String, String>> entry : patchVersions.entrySet() )
+        for ( Map.Entry<Semver, Map<String, String>> versionEntry : patchVersions.entrySet() )
         {
-            Semver version = entry.getKey();
-            Map<String, String> message = entry.getValue();
+            Semver version = versionEntry.getKey();
+            Map<String, String> message = versionEntry.getValue();
 
-            for ( User recipient : recipients )
+            // Check if message has been sent before using
+            // version.getValue() as extMessageId
+            List<MessageConversation> existingMessages = messageService.getMatchingExtId( version.getValue() );
+
+            if ( existingMessages.isEmpty() )
             {
-                // Check if message has been sent before using
-                // version.getValue() as extMessageId
-                List<MessageConversation> existingMessages = messageService.getMatchingExtId( version.getValue() );
-
-                if ( existingMessages.isEmpty() )
+                for ( User recipient : recipients )
                 {
                     MessageConversationParams params = new MessageConversationParams.Builder()
-                        .withRecipients( ImmutableSet.of( recipient ) )
+                        .withRecipients( Set.of( recipient ) )
                         .withSubject( NEW_VERSION_AVAILABLE_MESSAGE_SUBJECT )
-                        .withText( buildMessageText( message ) )
+                        .withText( buildMessageBody( message ) )
                         .withMessageType( MessageType.SYSTEM )
                         .withExtMessageId( version.getValue() ).build();
 
@@ -238,7 +236,7 @@ public class SystemUpdateService
         Set<User> recipients = messageService.getSystemUpdateNotificationRecipients();
 
         // Fallback to fetching all users with ALL authority for our recipient
-        // list.
+        // list if no explicit recipients group are set.
         return !recipients.isEmpty() ? recipients : getUsersWithAllAuthority();
     }
 
@@ -246,17 +244,17 @@ public class SystemUpdateService
     {
         Set<User> recipients = new HashSet<>();
 
-        List<UserCredentials> userCredentials = userCredentialsStore.getHasAuthority( "ALL" );
+        List<User> users = userStore.getHasAuthority( "ALL" );
 
-        for ( UserCredentials credentials : userCredentials )
+        for ( User user : users )
         {
-            recipients.add( userService.getUserByUsername( credentials.getUsername() ) );
+            recipients.add( userService.getUserByUsername( user.getUsername() ) );
         }
 
         return recipients;
     }
 
-    private String buildMessageText( Map<String, String> messageValues )
+    private String buildMessageBody( Map<String, String> messageValues )
     {
         String version = messageValues.get( FIELD_NAME_VERSION );
         String releaseDate = messageValues.get( FIELD_NAME_RELEASE_DATE );
@@ -267,7 +265,7 @@ public class SystemUpdateService
                 + "Version: %s%n"
                 + "Release data: %s%n"
                 + "Download URL: %s%n",
-            NEW_VERSION_AVAILABLE_MESSAGE_SUBJECT,
+            String.format( NEW_VERSION_AVAILABLE_MESSAGE_BODY, version ),
             version,
             releaseDate,
             downloadUrl );
